# laser-scanner-toolkit

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.ps1  build.sh  conanfile.py  gui.ps1  run_demo.ps1  vcpkg.json
.github/workflows/: build.yml  release.yml
demo/: demo_camera_calib.cpp  demo_full_pipeline.cpp  demo_light_plane_calib.cpp  demo_processing.cpp
docs/: architecture.md
gui/: EvidenceView.cpp  EvidenceView.h  ImageView.cpp  ImageView.h  MainWindow.cpp  MainWindow.h  PipelineRunner.cpp  PipelineRunner.h  PointCloudView.cpp  PointCloudView.h  ResultParser.cpp  ResultParser.h  main.cpp  test_result_parser.cpp
include/lsc/calib/: camera_calib.h  light_plane_calib.h  motion_axis_calib.h
include/lsc/core/: io_utils.h  laser_line.h  log.h  ray_plane.h  result.h  types.h
include/lsc/hal/: camera.h  motion_controller.h
include/lsc/proc/: filter.h  measurement.h  segmentation.h
include/lsc/recon/: reconstructor.h
include/lsc/sim/: simulated_scanner.h
include/lsc/viz/: open3d_viewer.h
launcher/: main.cpp
python/: bindings.cpp
src/calib/: camera_calib.cpp  light_plane_calib.cpp  motion_axis_calib.cpp
src/core/: io_utils.cpp  laser_line.cpp  ray_plane.cpp  types.cpp
src/proc/: filter.cpp  measurement.cpp  segmentation.cpp
src/recon/: reconstructor.cpp
src/sim/: simulated_scanner.cpp
tests/: bench_filter.cpp  fuzz_ply.cpp  test_core.cpp
validation/: validate_calibration.cpp  validate_reconstruction.cpp  validate_repeatability.cpp  validate_robustness.cpp
